tests/NormalTests/paczka1/fuzzy1/67512361.err
Error in line 8: 8yevgwk A136 74,5
Error in line 17: w06c A1C6 5C,9
Error in line 23: w06c A863 94,0
Error in line 26: w06c S773 2,2
Error in line 31: w06c A136 15,2
Error in line 2: Iz56qCi A863 39,5
Error in line 34: w06c S456 92,8
